Issue #2490780 by ultimateboy: Increase contrast on main navigation

--- a/themes/custom/foundation_publicize/scss/modules/_topbar.scss
+++ b/themes/custom/foundation_publicize/scss/modules/_topbar.scss
@@ -1,5 +1,5 @@
 .l-header .contain-to-grid {
-	background-color: rgba($top-bar-base-color, 0.2);
+	background-color: rgba($top-bar-base-color, 0.7);
 }
 .top-bar {
 	background-color:transparent;
